--- a/admin/app/pages/tienda/tienda.html
+++ b/admin/app/pages/tienda/tienda.html
@@ -6,22 +6,26 @@
   <div class="row">
     <div class="col-md-12">
       <div class="tile p-15" ng-if="ctrl.modoSeleccionar">
-        <section class="tile-header pl-0">
+        <section class="tile-header">
           <div class="row">
-            <h1 class="heading text-center">{{ctrl.listaExcursiones[0].titulo_act}}</h1>
+            <div class="col-sm-12"><h1 class="heading">TIENDA</h1></div>
+
             <!-- <div class="col-md-12 f-18 mb text-info">{{ 'Text.SEL_PAQUETE' | translate }}</div> -->
+            <div class="col-sm-12" >
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            </div>
             <div class="card-container col-lg-3 col-sm-6 col-sm-12" ng-repeat="item in ctrl.listaPaquetes">
                 <div class="card" ng-click="ctrl.selPaquete(item.idpaquete)">
                   <div class="front text-center" ng-class="{'bg-lightred': item.selected, 'bg-lightgray':!item.selected}">
                     <div class="row">
                       <div class="col-xs-12">
-                        <p class="text-lg line-lg text-strong">{{item.titulo_pq}}</p>
+                        <p class="text-lg line-lg text-strong">{{ctrl.listaExcursiones[0].titulo_act}}</p>
                       </div>
                     </div>
                     <div class="row">
                       <div class="col-xs-6">
                         <div><i class="fa fa-camera fa-2x"></i></div>
-                        <div>{{item.cantidad}} fotos</div>
+                        <div>{{item.cantidad}} fotos + video</div>
                       </div>
                       <div class="col-xs-6">
                         <div><i class="fa fa-usd fa-2x"></i></div>
@@ -32,7 +36,7 @@
                   <div class="back text-center p-md" ng-class="{'bg-lightred': item.selected, 'bg-lightgray':!item.selected}">
                     <div class="row" style="height: 50%">
                       <div class="col-xs-12">
-                        <p class="text-lg line-lg text-strong">{{item.titulo_pq}}</p>
+                        <p class="text-lg line-lg text-strong">{{ctrl.listaExcursiones[0].titulo_act}}</p>
                         <p class="text-md line-md">{{item.cantidad}} fotos al precio de US$ {{item.monto}}</p>
                       </div>
                     </div>
