--- a/admin/app/pages/tienda/tienda.html
+++ b/admin/app/pages/tienda/tienda.html
@@ -132,7 +132,7 @@
         <ul class="mix-controls">
           <li class="btn pull-right" ng-class="{'disabled': !ctrl.isSelected}" ng-click='ctrl.confirmDescarga();'>
             <a href="javascript:;"><i class="halcyon-icon-next" ></i> {{ 'Form.NEXT' | translate }}</a>
-          </li>
+          </li>{{ctrl.modoPagar}}
         </ul>
       </div>
 
@@ -151,11 +151,11 @@
             <!-- <minotaur-tile-close></minotaur-tile-close> -->
           </div>
         </section>
-        <ul class="mix-controls">
+        <!-- <ul class="mix-controls">
           <li ng-click='ctrl.btnPedidos();' ng-if="!fSessionCI.es_salida">
             <a href="javascript:;"><i class="fa fa-gift" ></i> {{ 'Text.MERCHANDISING' | translate }}</a>
           </li>
-        </ul>
+        </ul> -->
         <!-- GALERIA RESUMEN -->
         <div class="row mix-grid" masonry ng-show="!ctrl.pedidoBool">
           <div class="gallery" ng-mixitup magnific-popup="{
@@ -176,11 +176,11 @@
               </div>
               <div class="img-details-static">
                 <!-- <h4>{{image.title}}</h4> -->
-                <div class="img-controls">
+                <!-- <div class="img-controls">
                   <a class="img-select" ng-if="!image.es_salida" href="javascript:;" ng-click="ctrl.btnPedidos(image)" uib-tooltip="Merchandising" tooltip-placement="right">
                     <i class="fa fa-gift"></i>
                   </a>
-                </div>
+                </div> -->
               </div>
             </div>
           </div>
@@ -200,18 +200,18 @@
               <span class="input-group-addon">US$</span> <input type="text" class="pull-right text-right f-18" ng-disabled="true" ng-model="ctrl.monto_total" style="width: 80px; font-weight: bolder;"/> <span class="input-group-addon">.00</span>
             </div>
           </div>
-          <div class="form-inline col-md-12 col-sm-12 text-right" ng-if="ctrl.datosVista.tiene_descuento">
+         <!--  <div class="form-inline col-md-12 col-sm-12 text-right" ng-if="ctrl.datosVista.tiene_descuento">
             <label class="control-label mr-xs text-info f-18" style="font-weight: bolder;"> DESCUENTO</label>
             <div class="input-group mb-10">
               <span class="input-group-addon">US$</span> <input type="text" class="pull-right text-right f-18" ng-disabled="true" ng-model="ctrl.monto_descuento" style="width: 80px; font-weight: bolder;"/> <span class="input-group-addon">.00</span>
             </div>
-          </div>
-          <div class="form-inline col-md-12 col-sm-12 text-right" ng-if="ctrl.datosVista.tiene_descuento">
+          </div> -->
+          <!-- <div class="form-inline col-md-12 col-sm-12 text-right" ng-if="ctrl.datosVista.tiene_descuento">
             <label class="control-label mr-xs text-info f-18" style="font-weight: bolder;"> {{ 'Text.IMPORTE' | translate }}</label>
             <div class="input-group mb-10">
               <span class="input-group-addon">US$</span> <input type="text" class="pull-right text-right f-18" ng-disabled="true" ng-model="ctrl.importe_total" style="width: 80px; font-weight: bolder;"/> <span class="input-group-addon">.00</span>
             </div>
-          </div>
+          </div> -->
           <div class="form-inline col-md-12 col-sm-12 mt-xs text-right">
             <label class="control-label mr-xs text-info f-18" style="font-weight: bolder;"> {{ 'Text.SALDO_INICIAL' | translate }}</label>
             <div class="input-group mb-10">
