--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 					</div>
 					<div class="col-sm-2">
 						<div class="login">
-							<a class="btn btn-mini btn-default-2 waves" ng-href="{{dirWeb}}admin" target="_blank" style="margin-bottom: 0px;margin-top: 12px;">ACCESO A TU CUENTA!</a>
+							<a class="btn btn-mini btn-default-2 waves" ng-href="{{dirWeb}}zona-privada" target="_blank" style="margin-bottom: 0px;margin-top: 12px;">ACCESO A TU CUENTA!</a>
 						</div>
 					</div>
 				</div>
@@ -300,10 +300,12 @@
 	<script src="assets/js/index.module.js"></script>
 	<script src="assets/js/index.config.js"></script>
 	<script src="assets/js/index.controller.js"></script>
+	<script src="assets/js/index.constants.js"></script>
 
 	<script src="assets/js/controllers/Home.js"></script>
 	<script src="assets/js/controllers/Blog.js"></script>
 	<script src="assets/js/controllers/Post.js"></script>
+	<script src="assets/js/controllers/login.js"></script>
 	<script src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 	<script src="//www.google.com/recaptcha/api.js?onload=onloadCallback&render=explicit"
         async defer></script>
