--- a/admin/app/pages/tienda/tienda.html
+++ b/admin/app/pages/tienda/tienda.html
@@ -65,7 +65,7 @@
               <button class="btn btn-transparent" uib-dropdown-toggle><i class="fa fa-cog"></i></button>
               <ul class="dropdown-menu dropdown-menu-custom" uib-dropdown-menu role="menu">
                 <li role="menuitem"><a href="javascript:;" minotaur-tile-minimize></a></li>
-                <li role="menuitem"><a href="javascript:;"ng-click="ctrl.cargarGaleria();" minotaur-tile-refresh></a></li>
+                <li role="menuitem"><a href="javascript:;" ng-click="ctrl.cargarGaleria();" minotaur-tile-refresh></a></li>
                 <li role="menuitem"><a href="javascript:;" minotaur-tile-fullscreen></a></li>
                 <li role="menuitem"><a href="javascript:;" minotaur-tile-lightbox></a></li>
               </ul>
@@ -132,7 +132,7 @@
         <ul class="mix-controls">
           <li class="btn pull-right" ng-class="{'disabled': !ctrl.isSelected}" ng-click='ctrl.confirmDescarga();'>
             <a href="javascript:;"><i class="halcyon-icon-next" ></i> {{ 'Form.NEXT' | translate }}</a>
-          </li>{{ctrl.modoPagar}}
+          </li>
         </ul>
       </div>
 
@@ -186,8 +186,8 @@
           </div>
         </div>
         <!-- MERCHANDISING -->
-        <div class="row"  ng-show="ctrl.pedidoBool" ng-include="'app/pages/tienda/pedido.php'">
-        </div>
+        <!-- <div class="row"  ng-show="ctrl.pedidoBool" ng-include="'app/pages/tienda/pedido.php'">
+        </div> -->
         <!-- CESTA -->
         <div class="row">
           <div class="col-md-12 col-sm-12 mt-lg" >
