--- a/admin/app/pages/tienda/tienda.html
+++ b/admin/app/pages/tienda/tienda.html
@@ -14,7 +14,7 @@
             <div class="col-sm-12" >
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
             </div>
-            <div class="card-container col-lg-3 col-sm-6 col-sm-12" ng-repeat="item in ctrl.listaPaquetes">
+            <!-- <div class="card-container col-lg-3 col-sm-6 col-sm-12" ng-repeat="item in ctrl.listaPaquetes">
                 <div class="card" ng-click="ctrl.selPaquete(item.idpaquete)">
                   <div class="front text-center" ng-class="{'bg-lightred': item.selected, 'bg-lightgray':!item.selected}">
                     <div class="row">
@@ -47,15 +47,54 @@
                       <div class="col-xs-6">
                         <div><i class="fa fa-camera"></i></div><div>Adicional + US$ {{ctrl.listaExcursiones[0].precio_por_adicional}}</div>
                       </div>
-                      <!-- <div class="col-xs-6">
-                        <div><i class="fa fa-video-camera fa-2x"></i></div><div> + US$ {{ctrl.listaExcursiones[0].precio_video}}</div>
-                      </div> -->
                     </div>
                   </div>
                 </div>
-
+            </div> -->
+            <div class="btn-group mb-5">
+              <label class="btn btn-default pack" ng-model="ctrl.radioModel" uib-btn-radio="'Pack'" ng-class="{'bg-lightred': ctrl.esPack, 'bg-lightgray':!ctrl.esPack}" ng-click="ctrl.selPaquete()">
+                <div class="row">
+                  <div class="col-xs-12">
+                      <p class="text-lg line-lg text-strong">{{ctrl.listaExcursiones[0].titulo_act}}</p>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col-xs-6">
+                    <div><i class="fa fa-camera fa-2x"></i></div>
+                    <div>{{ctrl.listaPaquetes[0].cantidad}} fotos + video</div>
+                  </div>
+                  <div class="col-xs-6">
+                    <div><i class="fa fa-usd fa-2x"></i></div>
+                    <div>US$ {{ctrl.listaPaquetes[0].monto}}</div>
+                  </div>
+                </div>
+              </label>
+              <label class="btn btn-default pack ml-lg" ng-model="ctrl.radioModel" uib-btn-radio="'Sueltas'" ng-class="{'bg-lightred': !ctrl.esPack, 'bg-lightgray':ctrl.esPack}" ng-click="ctrl.selPaquete()">
+                <div class="row">
+                  <div class="col-xs-12">
+                      <p class="text-lg line-lg text-strong">{{ctrl.listaExcursiones[0].titulo_act}}</p>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col-xs-6">
+                    <div><i class="fa fa-camera fa-2x"></i></div>
+                    <div>1 Foto</div>
+                  </div>
+                  <div class="col-xs-6">
+                    <div><i class="fa fa-usd fa-2x"></i></div>
+                    <div>US$ {{ctrl.listaExcursiones[0].precio_primera}}</div>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col-xs-6">
+                    <div>Adicionales</div>
+                  </div>
+                  <div class="col-xs-6">
+                    <div>US$ {{ctrl.listaExcursiones[0].precio_por_adicional}}</div>
+                  </div>
+                </div>
+              </label>
             </div>
-
           </div>
           <div class="row">
             <div class="col-md-12 f-18 mb text-info">{{ 'Text.SEL_PRODUCTO' | translate }}</div>
@@ -75,11 +114,11 @@
         </section>
 
         <ul class="mix-controls">
-          <li class="select-all" ng-class="{'disabled': !ctrl.images.length}">
+          <!-- <li class="select-all" ng-class="{'disabled': !ctrl.images.length}">
             <label class="checkbox minotaur-checkbox inline-block m-0" >{{ 'Text.TODOS' | translate }}
               <input type="checkbox" ng-model="selectedAll" ng-click="ctrl.selectAll()" ng-disabled="!ctrl.images.length"><div class="input-indicator"></div>
             </label>
-          </li>
+          </li> -->
 
           <li class="btn" ng-class="{'disabled': !ctrl.isSelected}" ng-click='ctrl.confirmDescarga();'>
             <a href="javascript:;"><i class="halcyon-icon-next" ></i> {{ 'Form.NEXT' | translate }}</a>
