--- a/admin/app/pages/tienda/tienda.html
+++ b/admin/app/pages/tienda/tienda.html
@@ -69,7 +69,7 @@
                   </div>
                 </div>
               </label>
-              <label class="btn btn-default pack ml-lg" ng-model="ctrl.radioModel" uib-btn-radio="'Sueltas'" ng-class="{'bg-lightred': !ctrl.esPack, 'bg-lightgray':ctrl.esPack}" ng-click="ctrl.selPaquete()">
+              <label class="btn btn-default pack ml-lg" ng-model="ctrl.radioModel" uib-btn-radio="'Sueltas'" ng-class="{'bg-lightred': ctrl.esIndividual, 'bg-lightgray':!ctrl.esIndividual}" ng-click="ctrl.selPaquete()">
                 <div class="row">
                   <div class="col-xs-12">
                       <p class="text-lg line-lg text-strong">{{ctrl.listaExcursiones[0].titulo_act}}</p>
