ajustes en tienda

--- a/admin/app/pages/tienda/tienda.html
+++ b/admin/app/pages/tienda/tienda.html
@@ -193,7 +193,7 @@
         </div> -->
         <!-- CESTA -->
         <div class="row">
-          <div class="col-md-12 col-sm-12 mt-lg" >
+          <div class="col-md-12 col-sm-12 mt-lg" ng-show="false">
             <div ui-grid="ctrl.gridOptions" ui-grid-auto-resize class="grid table-responsive clear"  ng-style="ctrl.getTableHeight();">
             </div>
           </div>
@@ -245,6 +245,7 @@
 
       </div>
       <div class="row" ng-if="ctrl.pasarela" ng-include="'app/pages/tienda/pasarela.php'"> </div>
+
       <div class="tile p-15" style="min-height: 400px;" ng-if="ctrl.modoDescargaCompleta">
         <section class="tile-header pl-0">
           <h1 class="heading">{{ 'Text.COMPRA_EXITOSA' | translate }}</h1>
