--- a/admin/index.html
+++ b/admin/index.html
@@ -276,6 +276,7 @@
     <script src="app/pages/medida/medida.controller.js"></script>
     <script src="app/pages/encuesta/encuesta.controller.js"></script>
     <script src="app/pages/mensaje/mensaje.controller.js"></script>
+    <script src="app/pages/pago/pago.controller.js"></script>
 
     <script src="app/components/directives/vector-map.directive.js"></script>
     <script src="app/components/directives/validate-on-submit.directive.js"></script>
