--- a/admin/app/pages/cliente/cliente.html
+++ b/admin/app/pages/cliente/cliente.html
@@ -46,6 +46,9 @@
               <div class="form-group pull-right mt-lg mr" style="position: relative;z-index: 10">
                 <button class="btn btn-primary" ng-click='c.btnOrganizarImagenes()'>Organizar Imágenes</button>
               </div>
+              <div class="form-group pull-right mt-lg mr" style="position: relative;z-index: 10">
+                <button ng-show="c.mySelectionGrid.length > 0" class="btn btn-danger" ng-click='c.btnAnular()'>Eliminar</button>
+              </div>
             </div>
             <!-- <select ng-model="c.lang" ng-options="l for l in c.langs"></select><br> -->
             <!-- <div class="col-md-12 col-sm-12" ui-i18n="{{c.lang}}"> -->
