--- a/admin/app/pages/tienda/tienda.html
+++ b/admin/app/pages/tienda/tienda.html
@@ -8,7 +8,7 @@
       <div class="tile p-15" ng-if="ctrl.modoSeleccionar">
         <section class="tile-header">
           <div class="row">
-            <div class="col-sm-12 mb-md"><h1 class="heading">TIENDA</h1></div>
+            <div class="col-sm-12 mb-md"><h1 class="heading">SHOP</h1></div>
             <div class="col-sm-12" ng-bind-html="ctrl.mensajes[0].contenido">
             </div>
             <div class="col-md-12 f-18 mb text-info">{{ 'Text.SEL_PRODUCTO' | translate }}</div>
@@ -17,15 +17,15 @@
                 <div class="">
                   <div class="col-xs-12">
                       <p class="text-lg line-lg text-strong">{{ctrl.listaExcursiones[0].titulo_act}}</p>
-                      <p class="text-sm line-sm">Paquete completo</p>
+                      <p class="text-sm line-sm">Total Pack</p>
                   </div>
                 </div>
                 <div class="">
-                  <div class="col-xs-6">
+                  <div class="col-xs-6 text-center pl-0 pr-0">
                     <div><i class="fa fa-camera fa-2x"></i></div>
-                    <div>{{ctrl.listaPaquetes[0].cantidad}} fotos <br>+ video</div>
+                    <div>all the photos <br> + video</div>
                   </div>
-                  <div class="col-xs-6">
+                  <div class="col-xs-6 text-center pl-0 pr-0">
                     <div><i class="fa fa-usd fa-2x"></i></div>
                     <div>US$ {{ctrl.listaPaquetes[0].monto}}</div>
                   </div>
@@ -35,22 +35,22 @@
                 <div class="">
                   <div class="col-xs-12">
                       <p class="text-lg line-lg text-strong">{{ctrl.listaExcursiones[0].titulo_act}}</p>
-                      <p class="text-sm line-sm">Fotos Individuales</p>
+                      <p class="text-sm line-sm">Individual photos</p>
                   </div>
                 </div>
                 <div class="">
-                  <div class="col-xs-6">
+                  <div class="col-xs-6 text-center pl-0 pr-0">
                     <div><i class="fa fa-camera fa-2x"></i></div>
-                    <div>1 Foto</div>
+                    <div>1 additional </div>
                   </div>
-                  <div class="col-xs-6">
+                  <div class="col-xs-6 text-center pl-0 pr-0">
                     <div><i class="fa fa-usd fa-2x"></i></div>
                     <div>US$ {{ctrl.listaExcursiones[0].precio_primera}}</div>
                   </div>
                 </div>
                 <div class="">
                   <div class="col-xs-6">
-                    <div>Adicionales</div>
+                    <div>Photo</div>
                   </div>
                   <div class="col-xs-6">
                     <div>US$ {{ctrl.listaExcursiones[0].precio_por_adicional}}</div>
