--- a/admin/index.html
+++ b/admin/index.html
@@ -261,18 +261,19 @@
     <script src="app/pages/tipobanner/tipobanner.controller.js"></script>
     <script src="app/pages/config/config.controller.js"></script>
     <script src="app/pages/blog/blog.controller.js"></script>
-    <script src="app/pages/descuento/descuento.controller.js"></script>
-    <script src="app/pages/email/email.controller.js"></script>
+    <script src="app/pages/ajustes/ajustes.controller.js"></script>
+    <!-- <script src="app/pages/descuento/descuento.controller.js"></script> -->
+    <!-- <script src="app/pages/email/email.controller.js"></script> -->
     <script src="app/pages/excursion/excursion.controller.js"></script>
 
     <script src="app/pages/cliente/cliente.controller.js"></script>
     <script src="app/pages/usuario/usuario.controller.js"></script>
-    <script src="app/pages/perfil/perfil.controller.js"></script>
+    <!-- <script src="app/pages/perfil/perfil.controller.js"></script> -->
     <script src="app/pages/idioma/idioma.controller.js"></script>
     <script src="app/pages/mi-galeria/gallery.controller.js"></script>
     <script src="app/pages/tienda/tienda.controller.js"></script>
-    <script src="app/pages/producto/producto.controller.js"></script>
-    <script src="app/pages/pedido/pedido.controller.js"></script>
+    <!-- <script src="app/pages/producto/producto.controller.js"></script> -->
+    <!-- <script src="app/pages/pedido/pedido.controller.js"></script> -->
     <script src="app/pages/medida/medida.controller.js"></script>
     <script src="app/pages/encuesta/encuesta.controller.js"></script>
     <script src="app/pages/mensaje/mensaje.controller.js"></script>
