--- a/admin/app/pages/cliente/cliente.html
+++ b/admin/app/pages/cliente/cliente.html
@@ -44,8 +44,11 @@
                 <button class="btn btn-warning" ng-click='c.btnImportarExcel()'>Subir Excel</button>
               </div>
               <div class="form-group pull-right mt-lg mr" style="position: relative;z-index: 10">
-                <button class="btn btn-primary" ng-click='c.btnOrganizarImagenes()'>Organizar Imágenes</button>
+                <button class="btn btn-primary" ng-click='c.btnSubirZip()'>Subir Zip</button>
               </div>
+              <!-- <div class="form-group pull-right mt-lg mr" style="position: relative;z-index: 10">
+                <button class="btn btn-primary" ng-click='c.btnOrganizarImagenes()'>Organizar Imágenes</button>
+              </div> -->
               <div class="form-group pull-right mt-lg mr" style="position: relative;z-index: 10">
                 <button ng-show="c.mySelectionGrid.length > 0" class="btn btn-danger" ng-click='c.btnAnular()'>Eliminar</button>
               </div>
