--- a/admin/app/pages/cliente/cliente.html
+++ b/admin/app/pages/cliente/cliente.html
@@ -28,15 +28,23 @@
         <!-- tile body -->
         <section class="tile-body">
           <div class="row">
-            <div class="col-md-3 col-sm-12 mb">
-              <label> EXCURSIONES </label>
+            <div class="form-group col-md-3 col-sm-12 mb">
+              <label class="control-label minotaur-label"> EXCURSIONES </label>
               <select class="form-control"
                       ng-model="c.fBusqueda.filtroExcursiones" ng-change="c.getPaginationServerSide(true);"
                       ng-options="item.descripcion for item in c.listaExcursionesFiltro"
                       aria-invalid="false" style="">
               </select>
             </div>
-            <div class="col-md-9 col-sm-12">
+            <div class="form-group col-md-3 col-sm-12 mb">
+              <label class="control-label minotaur-label"> PROCESADO </label>
+              <select class="form-control"
+                      ng-model="c.fBusqueda.filtroProcesados" ng-change="c.getPaginationServerSide(true);"
+                      ng-options="item.descripcion for item in c.listaProcesadosFiltro"
+                      aria-invalid="false" style="" ng-disabled="true">
+              </select>
+            </div>
+            <div class="col-md-6 col-sm-12">
               <div class="form-group pull-right mt-lg" style="position: relative;z-index: 10">
                 <button class="btn btn-success" ng-click='c.btnNuevo()'>Nuevo</button>
               </div>
