--- a/admin/app/pages/mi-galeria/gallery.html
+++ b/admin/app/pages/mi-galeria/gallery.html
@@ -27,10 +27,10 @@
         </div>
       </section>
 
-      <ul class="mix-controls">
+      <ul class="mix-controls pl-lg">
         <li class="select-all">
           <label class="checkbox minotaur-checkbox inline-block m-0">{{ 'Text.TODOS' | translate }}
-            <input type="checkbox" ng-model="selectedAll" ng-click="ga.selectAll()"><div class="input-indicator"></div>
+            <input type="checkbox" ng-model="ga.fData.sel" ng-checked="ga.selectedAll" ng-click="ga.selectAll()"><div class="input-indicator"></div>
           </label>
         </li>
 
