--- a/admin/app/pages/tienda/tienda.html
+++ b/admin/app/pages/tienda/tienda.html
@@ -16,32 +16,32 @@
               <label class="btn btn-default pack" ng-model="ctrl.radioModel" uib-btn-radio="'Pack'" ng-class="{'bg-lightred': ctrl.esPack, 'bg-lightgray':!ctrl.esPack}" ng-click="ctrl.selPaquete()">
                 <div class="">
                   <div class="col-xs-12">
-                      <p class="text-lg line-lg text-strong">{{ctrl.listaExcursiones[0].titulo_act}}</p>
-                      <p class="text-sm line-sm">Total Pack</p>
+                      <p class="text-lg line-lg text-strong">FULL PACK</p>
+                      <p class="text-sm line-sm">{{ctrl.listaExcursiones[0].titulo_act}}</p>
                   </div>
                 </div>
                 <div class="">
                   <div class="col-xs-6 text-center pl-0 pr-0">
-                    <div><i class="fa fa-camera fa-2x"></i></div>
-                    <div>all the photos <br> + video</div>
+                    <div><i class="fa fa-camera fa-2x va-middle"></i> <i class="fa fa-plus va-middle"></i> <i class="fa fa-video-camera fa-2x va-middle"></i></div>
+                    <div>ALL PHOTOS <br> + VIDEO</div>
                   </div>
                   <div class="col-xs-6 text-center pl-0 pr-0">
                     <div><i class="fa fa-usd fa-2x"></i></div>
-                    <div>US$ {{ctrl.listaPaquetes[0].monto}}</div>
+                    <div>US$ {{ctrl.listaExcursiones[0].monto_total}}</div>
                   </div>
                 </div>
               </label>
               <label class="btn btn-default pack ml-lg" ng-model="ctrl.radioModel" uib-btn-radio="'Sueltas'" ng-class="{'bg-lightred': ctrl.esIndividual, 'bg-lightgray':!ctrl.esIndividual}" ng-click="ctrl.selPaquete()">
                 <div class="">
                   <div class="col-xs-12">
-                      <p class="text-lg line-lg text-strong">{{ctrl.listaExcursiones[0].titulo_act}}</p>
-                      <p class="text-sm line-sm">Individual photos</p>
+                      <p class="text-lg line-lg text-strong">ONE BY ONE</p>
+                      <p class="text-sm line-sm">{{ctrl.listaExcursiones[0].titulo_act}}</p>
                   </div>
                 </div>
                 <div class="">
                   <div class="col-xs-6 text-center pl-0 pr-0">
                     <div><i class="fa fa-camera fa-2x"></i></div>
-                    <div>1 additional </div>
+                    <div>ONE PHOTO</div>
                   </div>
                   <div class="col-xs-6 text-center pl-0 pr-0">
                     <div><i class="fa fa-usd fa-2x"></i></div>
@@ -49,10 +49,10 @@
                   </div>
                 </div>
                 <div class="">
-                  <div class="col-xs-6">
-                    <div>Photo</div>
+                  <div class="col-xs-6 text-center pl-0 pr-0">
+                    <div>ADDITIONAL</div>
                   </div>
-                  <div class="col-xs-6">
+                  <div class="col-xs-6 text-center pl-0 pr-0">
                     <div>US$ {{ctrl.listaExcursiones[0].precio_por_adicional}}</div>
                   </div>
                 </div>
@@ -159,6 +159,45 @@
             <a href="javascript:;"><i class="fa fa-gift" ></i> {{ 'Text.MERCHANDISING' | translate }}</a>
           </li>
         </ul> -->
+        <!-- CESTA -->
+        <div class="row">
+          <div class="col-md-12 col-sm-12 mt-lg" ng-show="false">
+            <div ui-grid="ctrl.gridOptions" ui-grid-auto-resize class="grid table-responsive clear"  ng-style="ctrl.getTableHeight();">
+            </div>
+          </div>
+          <div class="form-inline col-md-12 col-sm-12 mt-lg text-right">
+            <label class="control-label mr-xs text-info f-18" style="font-weight: bolder;"> TOTAL</label>
+            <div class="input-group mb-10">
+              <span class="input-group-addon">US$</span> <input type="text" class="pull-right text-right f-18" ng-disabled="true" ng-model="ctrl.monto_total" style="width: 80px; font-weight: bolder;"/> <span class="input-group-addon">.00</span>
+            </div>
+          </div>
+          <div class="form-inline col-md-12 col-sm-12 mt-xs text-right">
+            <label class="control-label mr-xs text-info f-18" style="font-weight: bolder;"> {{ 'Text.SALDO_INICIAL' | translate }}</label>
+            <div class="input-group mb-10">
+              <span class="input-group-addon">US$</span> <input type="text" class="pull-right text-right f-18" ng-disabled="true" ng-model="fSessionCI.monedero" style="width: 80px; font-weight: bolder;"/> <span class="input-group-addon">.00</span>
+            </div>
+          </div>
+          <div class="form-inline col-md-12 col-sm-12 mt-xs text-right">
+            <label class="control-label mr-xs text-info f-18" style="font-weight: bolder;">{{ 'Text.SALDO_FINAL' | translate }}</label>
+            <div class="input-group mb-10">
+              <span class="input-group-addon">US$</span> <input type="text" class="pull-right text-right f-18" ng-disabled="true" ng-model="ctrl.saldo_final" style="width: 80px; font-weight: bolder;"/> <span class="input-group-addon">.00</span>
+            </div>
+          </div>
+          <div class="form-inline col-md-12 col-sm-12 mt-xs text-right" ng-show="ctrl.monto_a_pagar > 0">
+            <label class="control-label mr-xs text-info f-18" style="font-weight: bolder;"> {{ 'Text.TOTAL_PAGAR' | translate }}</label>
+            <div class="input-group mb-10">
+              <span class="input-group-addon">US$</span> <input type="text" class="pull-right text-right f-18" ng-disabled="true" ng-model="ctrl.monto_a_pagar" style="width: 80px; font-weight: bolder;"/> <span class="input-group-addon">.00</span>
+            </div>
+          </div>
+          <div class="col-md-12 mt">
+            <label class="checkbox minotaur-checkbox inline-block m-0 pull-right">He leído y acepto los <a href="javascript:;" ng-click="ctrl.btnTerminosCondiciones();" >Términos y Condiciones</a>
+              <input type="checkbox" ng-model="ctrl.selectedTerminos"><div class="input-indicator"></div>
+            </label>
+          </div>
+          <div class="col-md-12 mt">
+            <button class="btn btn-success btn-ef btn-ef-5 btn-ef-5b mb-10 pull-right" ng-click="ctrl.btnPagar()"><i class="fa fa-dollar"></i> <span>{{ 'Text.PAGAR' | translate }}</span></button>
+          </div>
+        </div>
         <!-- GALERIA RESUMEN -->
         <div class="row mix-grid" masonry>
           <div class="gallery" ng-mixitup magnific-popup="{
@@ -191,57 +230,7 @@
         <!-- MERCHANDISING -->
         <!-- <div class="row"  ng-show="ctrl.pedidoBool" ng-include="'app/pages/tienda/pedido.php'">
         </div> -->
-        <!-- CESTA -->
-        <div class="row">
-          <div class="col-md-12 col-sm-12 mt-lg" ng-show="false">
-            <div ui-grid="ctrl.gridOptions" ui-grid-auto-resize class="grid table-responsive clear"  ng-style="ctrl.getTableHeight();">
-            </div>
-          </div>
-          <div class="form-inline col-md-12 col-sm-12 mt-lg text-right">
-            <label class="control-label mr-xs text-info f-18" style="font-weight: bolder;"> TOTAL</label>
-            <div class="input-group mb-10">
-              <span class="input-group-addon">US$</span> <input type="text" class="pull-right text-right f-18" ng-disabled="true" ng-model="ctrl.monto_total" style="width: 80px; font-weight: bolder;"/> <span class="input-group-addon">.00</span>
-            </div>
-          </div>
-         <!--  <div class="form-inline col-md-12 col-sm-12 text-right" ng-if="ctrl.datosVista.tiene_descuento">
-            <label class="control-label mr-xs text-info f-18" style="font-weight: bolder;"> DESCUENTO</label>
-            <div class="input-group mb-10">
-              <span class="input-group-addon">US$</span> <input type="text" class="pull-right text-right f-18" ng-disabled="true" ng-model="ctrl.monto_descuento" style="width: 80px; font-weight: bolder;"/> <span class="input-group-addon">.00</span>
-            </div>
-          </div> -->
-          <!-- <div class="form-inline col-md-12 col-sm-12 text-right" ng-if="ctrl.datosVista.tiene_descuento">
-            <label class="control-label mr-xs text-info f-18" style="font-weight: bolder;"> {{ 'Text.IMPORTE' | translate }}</label>
-            <div class="input-group mb-10">
-              <span class="input-group-addon">US$</span> <input type="text" class="pull-right text-right f-18" ng-disabled="true" ng-model="ctrl.importe_total" style="width: 80px; font-weight: bolder;"/> <span class="input-group-addon">.00</span>
-            </div>
-          </div> -->
-          <div class="form-inline col-md-12 col-sm-12 mt-xs text-right">
-            <label class="control-label mr-xs text-info f-18" style="font-weight: bolder;"> {{ 'Text.SALDO_INICIAL' | translate }}</label>
-            <div class="input-group mb-10">
-              <span class="input-group-addon">US$</span> <input type="text" class="pull-right text-right f-18" ng-disabled="true" ng-model="fSessionCI.monedero" style="width: 80px; font-weight: bolder;"/> <span class="input-group-addon">.00</span>
-            </div>
-          </div>
-          <div class="form-inline col-md-12 col-sm-12 mt-xs text-right">
-            <label class="control-label mr-xs text-info f-18" style="font-weight: bolder;">{{ 'Text.SALDO_FINAL' | translate }}</label>
-            <div class="input-group mb-10">
-              <span class="input-group-addon">US$</span> <input type="text" class="pull-right text-right f-18" ng-disabled="true" ng-model="ctrl.saldo_final" style="width: 80px; font-weight: bolder;"/> <span class="input-group-addon">.00</span>
-            </div>
-          </div>
-          <div class="form-inline col-md-12 col-sm-12 mt-xs text-right" ng-show="ctrl.monto_a_pagar > 0">
-            <label class="control-label mr-xs text-info f-18" style="font-weight: bolder;"> {{ 'Text.TOTAL_PAGAR' | translate }}</label>
-            <div class="input-group mb-10">
-              <span class="input-group-addon">US$</span> <input type="text" class="pull-right text-right f-18" ng-disabled="true" ng-model="ctrl.monto_a_pagar" style="width: 80px; font-weight: bolder;"/> <span class="input-group-addon">.00</span>
-            </div>
-          </div>
-          <div class="col-md-12 mt">
-            <label class="checkbox minotaur-checkbox inline-block m-0 pull-right">He leído y acepto los <a href="javascript:;" ng-click="ctrl.btnTerminosCondiciones();" >Términos y Condiciones</a>
-              <input type="checkbox" ng-model="ctrl.selectedTerminos"><div class="input-indicator"></div>
-            </label>
-          </div>
-          <div class="col-md-12 mt">
-            <button class="btn btn-success btn-ef btn-ef-5 btn-ef-5b mb-10 pull-right" ng-click="ctrl.btnPagar()"><i class="fa fa-dollar"></i> <span>{{ 'Text.PAGAR' | translate }}</span></button>
-          </div>
-        </div>
+
 
       </div>
       <div class="row" ng-if="ctrl.pasarela" ng-include="'app/pages/tienda/pasarela.php'"> </div>
@@ -284,25 +273,6 @@
               <span ng-class="{'califica': 4 <= ctrl.calificacion}">★</span>
               <span ng-class="{'califica': 5 == ctrl.calificacion}">★</span>
             </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="rating-stars-calificado" style="width: 260px">
-              <div class="row m">
-                <div class="col-sm-6 text-lg text-orange dk b-a b-cyan br-10">★★★★★</div><label class="col-sm-6 text-left bold mt-xs">{{ 'Text.EXCELENTE' | translate }}</label>
-              </div>
-              <div class="row m">
-                <div class="col-sm-6 text-lg text-orange dk b-a b-cyan br-10">★★★★</div><label class="col-sm-6 text-left bold mt-xs">{{ 'Text.BUENO' | translate }}</label>
-              </div>
-              <div class="row m">
-                <div class="col-sm-6 text-lg text-orange dk b-a b-cyan br-10">★★★</div><label class="col-sm-6 text-left bold mt-xs">{{ 'Text.REGULAR' | translate }}</label>
-              </div>
-              <div class="row m">
-                <div class="col-sm-6 text-lg text-orange dk b-a b-cyan br-10">★★</div><label class="col-sm-6 text-left bold mt-xs">{{ 'Text.MALO' | translate }}</label>
-              </div>
-              <div class="row m">
-                <div class="col-sm-6 text-lg text-orange dk b-a b-cyan br-10">★</div><label class="col-sm-6 text-left bold mt-xs">{{ 'Text.MUY_MALO' | translate }}</label>
-              </div>
           </div>
         </div>
       </div>
