--- a/admin/app/pages/cliente/cliente.html
+++ b/admin/app/pages/cliente/cliente.html
@@ -41,7 +41,7 @@
               <select class="form-control"
                       ng-model="c.fBusqueda.filtroProcesados" ng-change="c.getPaginationServerSide(true);"
                       ng-options="item.descripcion for item in c.listaProcesadosFiltro"
-                      aria-invalid="false" style="" ng-disabled="true">
+                      aria-invalid="false" style="" >
               </select>
             </div>
             <div class="col-md-6 col-sm-12">
