--- a/admin/app/pages/tienda/tienda.html
+++ b/admin/app/pages/tienda/tienda.html
@@ -17,7 +17,7 @@
                 <div class="">
                   <div class="col-xs-12">
                       <p class="text-lg line-lg text-strong">FULL PACK</p>
-                      <p class="text-sm line-sm">{{ctrl.listaExcursiones[0].titulo_act}}</p>
+                      <p class="text-sm line-sm">{{ctrl.listaExcursiones[0].descripcion}}</p>
                   </div>
                 </div>
                 <div class="">
@@ -27,7 +27,7 @@
                   </div>
                   <div class="col-xs-6 text-center pl-0 pr-0">
                     <div><i class="fa fa-usd fa-2x"></i></div>
-                    <div>US$ {{ctrl.listaExcursiones[0].monto_total}}</div>
+                    <div>US$ {{ctrl.listaExcursiones[0].precio_pack}}</div>
                   </div>
                 </div>
               </label>
@@ -35,7 +35,7 @@
                 <div class="">
                   <div class="col-xs-12">
                       <p class="text-lg line-lg text-strong">ONE BY ONE</p>
-                      <p class="text-sm line-sm">{{ctrl.listaExcursiones[0].titulo_act}}</p>
+                      <p class="text-sm line-sm">{{ctrl.listaExcursiones[0].descripcion}}</p>
                   </div>
                 </div>
                 <div class="">
@@ -53,7 +53,7 @@
                     <div>ADDITIONAL</div>
                   </div>
                   <div class="col-xs-6 text-center pl-0 pr-0">
-                    <div>US$ {{ctrl.listaExcursiones[0].precio_por_adicional}}</div>
+                    <div>US$ {{ctrl.listaExcursiones[0].precio_adicional}}</div>
                   </div>
                 </div>
               </label>
