--- a/admin/app/pages/cliente/cliente.html
+++ b/admin/app/pages/cliente/cliente.html
@@ -52,7 +52,7 @@
                 <button class="btn btn-warning" ng-click='c.btnImportarExcel()'>Subir Excel</button>
               </div>
               <div class="form-group pull-right mt-lg mr" style="position: relative;z-index: 10">
-                <button class="btn btn-primary" ng-click='c.btnSubirZip()'>Subir Zip</button>
+                <button class="btn btn-primary" ng-click='c.btnSubirZip()'>Procesar Zip</button>
               </div>
               <!-- <div class="form-group pull-right mt-lg mr" style="position: relative;z-index: 10">
                 <button class="btn btn-primary" ng-click='c.btnOrganizarImagenes()'>Organizar Imágenes</button>
