--- a/admin/app/pages/cliente/cliente.html
+++ b/admin/app/pages/cliente/cliente.html
@@ -46,6 +46,11 @@
             </div>
             <div class="col-md-6 col-sm-12">
               <div class="form-group pull-right mt-lg" style="position: relative;z-index: 10">
+                <button class="btn btn-default" ng-click='c.btnExportarListaPdf()' title="Exportar a PDF">
+                  <i class="fa fa-file-pdf-o text-danger f-18" ></i>
+                </button>
+              </div>
+              <div class="form-group pull-right mt-lg mr" style="position: relative;z-index: 10">
                 <button class="btn btn-success" ng-click='c.btnNuevo()'>Nuevo</button>
               </div>
               <div class="form-group pull-right mt-lg mr" style="position: relative;z-index: 10">
