--- a/admin/app/pages/cliente/cliente.html
+++ b/admin/app/pages/cliente/cliente.html
@@ -70,7 +70,7 @@
             <!-- <div class="col-md-12 col-sm-12" ui-i18n="{{c.lang}}"> -->
             <div class="col-md-12 col-sm-12">
               <!-- <p ui-t="groupPanel.description"></p> -->
-              <div ui-grid="c.gridOptions" ui-grid-selection ui-grid-resize-columns ui-grid-auto-resize ui-grid-pagination class="grid table-responsive clear">
+              <div ui-grid="c.gridOptions" ui-grid-selection ui-grid-resize-columns ui-grid-auto-resize ui-grid-pagination class="grid table-responsive clear" ng-style="c.getTableHeight();">
               </div>
             </div>
           </div>
