--- a/admin/app/pages/mi-galeria/gallery.html
+++ b/admin/app/pages/mi-galeria/gallery.html
@@ -64,7 +64,7 @@
                   socialshare-type="feed"
                   socialshare-via="145634995501895"
                   socialshare-url="{{image.src_share}}"
-                  socialshare-text="Mira mi foto"
+                  socialshare-text="Vacaciones en Punta Cana"
                   socialshare-hashtags="Caribbean"
                   socialshare-popup-height="300"
                   socialshare-popup-width="400"
@@ -75,7 +75,7 @@
                   <a href="" socialshare
                     socialshare-provider="twitter"
                     socialshare-type="sharer"
-                    socialshare-text="Mira mi foto en"
+                    socialshare-text="Vacaciones en Punta Cana"
                     socialshare-via="caribbean.com"
                     socialshare-hashtags="Caribbean"
                     socialshare-url="{{image.src_share}}"
@@ -114,10 +114,10 @@
                 <div>
                   <a href="" socialshare
                   socialshare-provider="facebook"
-                  socialshare-type="feed"
+                  socialshare-type="url"
                   socialshare-via="145634995501895"
                   socialshare-url="{{image.src_share}}"
-                  socialshare-text="Mira mi foto"
+                  socialshare-text="Vacaciones en Punta Cana"
                   socialshare-hashtags="Caribbean"
                   socialshare-popup-height="300"
                   socialshare-popup-width="400"
@@ -128,7 +128,7 @@
                   <a href="" socialshare
                     socialshare-provider="twitter"
                     socialshare-type="sharer"
-                    socialshare-text="Mira mi foto en"
+                    socialshare-text="Vacaciones en Punta Cana"
                     socialshare-via="caribbean.com"
                     socialshare-hashtags="Caribbean"
                     socialshare-url="{{image.src_share}}"
