--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
 								<li><a href="#terminos" fancybox>Terms & Conditions</a></li>
 								<li><a href="#preguntas" fancybox>FAQs</a></li>
 								<li><a href="#aviso" fancybox>Legal Notice</a></li>
+								<li><a href="http://www.goeystudio.com" target="_blank">About Us</a></li>
 
 							</ul>
 						</nav>
