--- a/admin/app/pages/cliente/cliente.html
+++ b/admin/app/pages/cliente/cliente.html
@@ -57,7 +57,7 @@
                 <button class="btn btn-warning" ng-click='c.btnImportarExcel()'>Subir Excel</button>
               </div>
               <div class="form-group pull-right mt-lg mr" style="position: relative;z-index: 10">
-                <button class="btn btn-primary" ng-click='c.btnProcesarZip()'>Procesar Zip</button>
+                <button class="btn btn-primary" ng-click='c.btnProcesarZip()'>Asignar Fotos y Videos</button>
               </div>
               <!-- <div class="form-group pull-right mt-lg mr" style="position: relative;z-index: 10">
                 <button class="btn btn-primary" ng-click='c.btnOrganizarImagenes()'>Organizar Imágenes</button>
